@@ -121,6 +121,10 @@ globalizations are obtained with Coq option \-dump\-glob).
 Do not insert links to the Coq standard library.
 
 .TP
+.BI \-\-external \ url \  libroot
+Set base URL for the external library whose root prefix is libroot.
+
+.TP
 .BI \-\-coqlib \ url
 Set base URL for the Coq standard library (default is http://coq.inria.fr/library/).
 
